Fix background too small in Webkit browsers
When a slide uses a background color or image Webkit would only size it
100vh but not more for larger slides. Turns out there was a "height:100%"
too much in the stylesheet.

--- a/src/style.less
+++ b/src/style.less
@@ -10,7 +10,6 @@
 
 html, body {
     min-height: 100%;
-    height: 100%;
 }
 
 :local(.container) {
